--- a/test/fixtures/answers.yml
+++ b/test/fixtures/answers.yml
@@ -1,11 +1,8 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  content: MyString
+  id: 1
+  content: answer1
   user_id: 1
   question_id: 1
 
-two:
-  content: MyString
-  user_id: 1
-  question_id: 1
