--- a/test/fixtures/answer_comments.yml
+++ b/test/fixtures/answer_comments.yml
@@ -1,11 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  content: MyString
-  user_id: 1
-  answer_id: 1
-
-two:
-  content: MyString
+  id: 1
+  content: answercomment1
   user_id: 1
   answer_id: 1
