--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -1,1 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+one:
+  id: 1
+  title: Q
+  user_id: 1
+  content: Question1
+  
